<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="image_text">Image</string>
    <string name="go4lunch_text">Go4Lunch</string>
    <string name="find_a_nice_restaurant_text">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_facebook_text">sign in with facebook</string>
    <string name="sign_in_google_text">Sign in with google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_view_text">Map View</string>
    <string name="list_view_text">List View</string>
    <string name="workmates_text">Workmates</string>
    <string name="hello_map_view_fragment_text">Hello Map View Fragment</string>
    <string name="hello_list_view_fragment_text">Hello List View fragment</string>
    <string name="hello_workmates_fragment_text">Hello Workmates fragment</string>
    <string name="your_lunch_text">YOUR LUNCH</string>
    <string name="settings_text">SETTINGS</string>
    <string name="logout_text">LOGOUT</string>
    <string name="open_navigation_drawer_description_text">Open navigation drawer</string>
    <string name="close_navigation_drawer_description_text">Close navigation drawer</string>
    <string name="profile_image_text">Profile image</string>
    <string name="facebook_image_text">Facebook image</string>
    <string name="google_image_text">Google + image</string>
    <string name="im_hungry_text">I\'m Hungry!</string>
    <string name="enter_restaurant_name_text">Enter restaurant name</string>
    <string name="search_restaurant_text">Search Panama Restaurant</string>
    <string name="restaurant_name_text">Restaurant name</string>
    <string name="food_country_and_address_text">French - 12 Rue Faubourg Poissonnière</string>
    <string name="until_text">Open until 6pm</string>
    <string name="restaurant_image_text">Restaurant image</string>
    <string name="m_text">120m</string>
    <string name="avatar_image_text">Avatar image</string>
    <string name="parentheses_text">(3)</string>
    <string name="yellow_start_image_text">Yellow start image</string>
    <string name="oc_pizza_text">Oc pizza</string>
    <string name="scarlett_text">Scarlett</string>
    <string name="is_eating_text">is eating</string>
    <string name="french_scarlett_text">French</string>
    <string name="parentheses_name_text">(Le Zinc)</string>
    <string name="yellow_star_text">Yellow star</string>
    <string name="call_icon_text">Call icon</string>
    <string name="call_text">CALL</string>
    <string name="like_text">LIKE</string>
    <string name="website_text">WEBSITE</string>
    <string name="check_floating_action_button_text">Check Floating action button</string>
    <string name="show_current_location_button">SHOW CURRENT LOCATION BUTTON</string>
    <string name="show_all_text">SHOW ALL</string>
    <string name="notifications_off_text">Notifications OFF</string>
    <string name="notifications_on_text">Notifications ON</string>
    <string name="loading_text">Loading…</string>
</resources>