<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/workmate_image_view"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:src="@color/yellow_star_background" />

        <TextView
            android:id="@+id/workmate_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="17dp"
            tools:text="@string/scarlett_text"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/is_eating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="5dp"
            tools:text="@string/is_eating_text"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/food_country_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="5dp"
            tools:text="@string/french_scarlett_text"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/restaurant_name_workmate_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="5dp"
            tools:text="@string/parentheses_name_text"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>