<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.RestaurantDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/restaurant_image_view_details"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:contentDescription="@string/restaurant_image_text"
            app:srcCompat="@drawable/oc_pizza_4_small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A9C606">

            <TextView
                android:id="@+id/restaurant_name_text_view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="@string/oc_pizza_text" />

            <ImageView
                android:id="@+id/yellow_star"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/restaurant_name_text_view_details"
                android:contentDescription="@string/yellow_star_text"
                app:srcCompat="@drawable/yellow_star_c_foreground" />

            <TextView
                android:id="@+id/food_country_and_restaurant_address_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yellow_star"
                android:layout_alignParentStart="true"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="27dp"
                tools:text="@string/food_country_and_address_text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/green_call_image_view"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="67dp"
                android:layout_marginBottom="17dp"
                android:layout_toStartOf="@+id/green_star_image_view"
                android:contentDescription="@string/call_icon_text"
                app:srcCompat="@drawable/green_call_foreground" />

            <ImageView
                android:id="@+id/green_star_image_view"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="67dp"
                android:layout_toStartOf="@+id/globe_image_view"
                android:contentDescription="@string/call_icon_text"
                app:srcCompat="@drawable/green_star_foreground" />

            <ImageView
                android:id="@+id/globe_image_view"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="27dp"
                android:contentDescription="@string/call_icon_text"
                app:srcCompat="@drawable/green_globe_foreground" />

            <TextView
                android:id="@+id/call_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/green_call_image_view"
                android:layout_alignParentStart="true"
                android:layout_marginStart="46dp"
                android:layout_marginTop="-17dp"
                android:layout_marginEnd="76dp"
                android:layout_toStartOf="@+id/green_star_image_view"
                android:text="@string/call_text"
                android:textColor="#A9C606"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/like_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/green_call_image_view"
                android:layout_marginTop="-17dp"
                android:layout_marginEnd="83dp"
                android:layout_toStartOf="@+id/globe_image_view"
                android:text="@string/like_text"
                android:textColor="#A9C606"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/green_call_image_view"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-17dp"
                android:layout_marginEnd="41dp"
                android:text="@string/website_text"
                android:textColor="#A9C606"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurant_details_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            tools:listitem="@layout/restaurant_row" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="21dp"
        app:srcCompat="@drawable/green_check_foreground"
        android:contentDescription="@string/check_floating_action_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>